--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<! doctype html>
 
 <html lang="en">
 <head>
@@ -13,12 +13,12 @@
     <link rel="shortcut icon" href="favicon.png" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
-    <!-- Bootstrap reference -->
+     <!-- Bootstrap reference -->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
-    <!-- Zing chart reference -->
+     <!-- Zing chart reference -->
     <script src= "https://cdn.zingchart.com/zingchart.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular.min.js" type="text/javascript"></script>
@@ -31,7 +31,7 @@
 
 <body class="impress-not-supported" ng-app="main" ng-controller="calculatorCtrl">
 
-<!--
+ <!--
     For example this fallback message is only visible when there is `impress-not-supported` class on body.
 -->
 <div class="fallback-message">
@@ -42,9 +42,11 @@
 <div id="impress">
 
     <div id="index" class="step slide" data-x="100" data-y="-1500">
-        The Energy Efficiency Potential of <strong>Cloud-Based Software</strong>
+      <img src="images/dimensiondata.png" title="Cloud" width="25%" /><br/><br/>
+        The Energy Efficiency Potential of <strong>Dimension Data Cloud</strong>
         <br/><br/>
-        <img src="images/CloudBenefits.jpg" title="Cloud" height="85%" width="95%" />
+        <p>Cloud computing holds great potential to  reduce data center energy demand moving forward, due to both large reductions in total servers through consolidation and large increases in facility efficiencies compared to traditional local data centers.</p>
+        <button id="next">Get started</button>
     </div>
 
     <div id="title" class="step" data-x="0" data-y="0" data-scale="4" data-rotate="300">
@@ -91,7 +93,7 @@
             <option>US Average</option>
         </select>
     </div>
-    <!--
+     <!--
 
         This element introduces rotation.
 
@@ -103,7 +105,7 @@
         <zingchart id="myChart" zc-json="myJson" zc-height=500 zc-width=600></zingchart>
     </div>
 
-    <!--
+     <!--
 
         This step here doesn't introduce anything new when it comes to data attributes, but you
         should notice in the demo that some words of this text are being animated.
@@ -123,15 +125,28 @@
         Only one current step has the `present` class.
 
     -->
-    <div id="ing" class="step" data-x="3500" data-y="-850" data-rotate="270" data-scale="6">
-        <p>by <b class="positioning">positioning</b>, <b class="rotating">rotating</b> and <b class="scaling">scaling</b> them on an infinite canvas</p>
+    <div id="ing" class="step" data-x="3500" data-y="-850" data-rotate="270" data-scale="2">
+      <p>Organizations have differing IT requirements and emissions footprints based on their industry. For example, a telecommunications
+        typically has a higher number of dedicated servers that an argicultural or farming organization.
+      </p>
+      <p>
+        In {{chosenIndustry}} the average percentage of computer using employees is <b ng-bind="computerUsingEmployeesPercent*100"></b>%, which in your company
+        adds up to <b ng-bind="computerUsingEmployees"></b> people.
+      </p>
     </div>
-
+    
     <div id="imagination" class="step" data-x="6700" data-y="-300" data-scale="6">
-        <p>the only <b>limit</b> is your <b class="imagination">imagination</b></p>
+      <p>
+        Workloads that we you might considering moving to the cloud because they benefit from centralisation and do not require local access are email, CRM and Productivity tools.
+      </p>
+      We estimate that your application usage is around
+      <p ng-repeat="application in user_to_application_usage">
+
+        <b>{{application.application}} users  - {{computerUsingEmployees*application.medium_usage}}</b>
+      </p>
     </div>
 
-    <!--
+     <!--
 
         And the last one shows full power and flexibility of impress.js.
 
@@ -148,7 +163,7 @@
         <span class="footnote">* beat that, prezi ;)</span>
     </div>
 
-    <!--
+     <!--
 
         So to summarize of all the possible attributes used to position presentation steps, we have:
 
@@ -169,6 +184,14 @@
 </div>
 <script src="js/impress.js"></script>
 <script>impress().init();</script>
+<script>
+$("#next").click(function () {
+   impress().next();
+});
 
+$("#prev").click(function () {
+   impress().prev();
+});
+</script>
 </body>
 </html>
