--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script src= "https://cdn.zingchart.com/zingchart.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular.min.js" type="text/javascript"></script>
-<script src="http://cdn.zingchart.com/angular/zingchart-angularjs.js">
+    <script src="http://cdn.zingchart.com/angular/zingchart-angularjs.js" type="text/javascript"></script>
 
       <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.3.0/lodash.min.js" type="text/javascript"></script>
       <script src="js/data.js" type="text/javascript"></script>
@@ -134,7 +134,7 @@
         adds up to <b ng-bind="computerUsingEmployees"></b> people.
       </p>
     </div>
-    
+
     <div id="imagination" class="step" data-x="6700" data-y="-300" data-scale="6">
       <p>
         Workloads that we you might considering moving to the cloud because they benefit from centralisation and do not require local access are email, CRM and Productivity tools.
