--- a/index.html
+++ b/index.html
@@ -101,9 +101,7 @@
         element should be rotated by 90 degrees clockwise.
 
     -->
-    <div id="its" class="step" data-x="850" data-y="3000" data-rotate="100" data-scale="5">
-        <zingchart id="myChart" zc-json="myJson" zc-height=500 zc-width=600></zingchart>
-    </div>
+
 
      <!--
 
@@ -126,11 +124,11 @@
 
     -->
     <div id="ing" class="step" data-x="3500" data-y="-850" data-rotate="270" data-scale="2">
-      <p>Organizations have differing IT requirements and emissions footprints based on their industry. For example, a telecommunications
-        typically has a higher number of dedicated servers that an argicultural or farming organization.
+      <p>Organizations have differing IT requirements and emissions footprints based on their industry. For example, telecommunications
+        typically has a higher number of dedicated servers than an argicultural or farming organization.
       </p>
       <p>
-        In {{chosenIndustry}} the average percentage of computer using employees is <b ng-bind="computerUsingEmployeesPercent*100"></b>%, which in your company
+        In <b>{{chosenIndustry}}</b> the average percentage of computer using employees is <b ng-bind="computerUsingEmployeesPercent*100"></b>%, which in your company
         adds up to <b ng-bind="computerUsingEmployees"></b> people.
       </p>
     </div>
@@ -146,21 +144,16 @@
       </p>
     </div>
 
-     <!--
-
-        And the last one shows full power and flexibility of impress.js.
-
-        You can not only position element in 3D, but also rotate it around any axis.
-        So this one here will get rotated by -40 degrees (40 degrees anticlockwise) around X axis and
-        10 degrees (clockwise) around Y axis.
-
-        You can of course rotate it around Z axis with `data-rotate-z` - it has exactly the same effect
-        as `data-rotate` (these two are basically aliases).
-
-    -->
     <div id="its-in-3d" class="step" data-x="6200" data-y="4300" data-z="-100" data-rotate-x="-40" data-rotate-y="10" data-scale="2">
-        <p><span class="have">have</span> <span class="you">you</span> <span class="noticed">noticed</span> <span class="its">it’s</span> <span class="in">in</span> <b>3D<sup>*</sup></b>?</p>
-        <span class="footnote">* beat that, prezi ;)</span>
+      <p>
+        The location of the servers makes a drastic difference, as a small server cabinet in an office consumes <strong>2x<strong> more power
+          than an enterprise-class datacenter for the same footprint of servers.
+      </p>
+    </div>
+    <div id="its-in-3d2" class="step" data-x="600" data-y="4300" data-z="-100" data-rotate-x="-40" data-rotate-y="10" data-scale="6">
+      <p>We estimate that your workloads are distributed as
+        <zingchart id="workloadDistribution" zc-json="workload_graph" zc-height=500 zc-width=600></zingchart>
+      </p>
     </div>
 
      <!--
@@ -178,6 +171,9 @@
         CSS transfrom docs: https://developer.mozilla.org/en/CSS/transform
 
     -->
+    <div id="its" class="step" data-x="850" data-y="3000" data-rotate="100" data-scale="5">
+        <zingchart id="myChart" zc-json="myJson" zc-height=500 zc-width=600></zingchart>
+    </div>
     <div id="overview" class="step" data-x="3000" data-y="1500" data-scale="10">
     </div>
 
